tests/miniJava/neg/005349_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { { } } } class java { static int [] java ( ) { return 0 ; } }
